  to use new machinery.  Removed old Render and Plot2 as obsolete.
  * LP#1039385: Major HUD improvements: text reduced; font size is now
  variable (and a preference); can appear with an outline text effect;
  can show/hide 'Zoom:' legend; uses reasonable superscript notation.
  * LP#1033910: Report in the HUD when we're at the zoom limit, and don't
  bother to zoom further.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 13 Jan 2013 18:01:10 +1300

brot2 (1.0) oneiric; urgency=low

  * Gamma release series.
  * LP#783040: Create preferences mechanism, make mouse button and scroll
  events configurable.
  * Fix HSV palette conversion to not worry about subnormals (and instead
  to worry about infinities).
  * LP#883771: Apply clip limits when recentring/zooming.
  * Tentative fix for occasional Cairo segfault on startup.
  * LP#783077: Add Burning Ship, Generalised Celtic, Variant and Bird of Prey
  fractals.
  * LP#883774: Turn control prefs into a first-class window.
  * Speed up some of the palette wrangling maths.
  * Speed up perceived sluggishness in drag-to-zoom rects on large windows.
  * Create persistent Prefs mechanism.
  * LP#783074: Make the hard-wired plot-end settings preferences, editable
  and persistent via dialog; also add options for them to the CLI.
  * LP#786106: Add Prev/Next items, with accelerators, to cycle through
  Fractal and Colour menus.
  * Fractal setup cosmetic fixes
  * LP#786549, LP#891954: Add prefs for HUD placement and colouring.
  * LP#783086: Add pref for max number of plotting threads.
  * LP#783085: Allow saving a different size of plot to that currently
  displayed.
  * Add "Optical Illusion" discrete palette.
  * LP#783081: Improve parameters dialog to allow zoom to be specified
  as any of real axis, imag axis, real pixel size, imag pixel size, or
  good old fashioned zoom.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Wed, 14 Dec 2011 23:25:37 +1300
