@@ -10,8 +10,9 @@ brot2 (1.0+unreleased) UNRELEASED; urgency=low
   can show/hide 'Zoom:' legend; uses reasonable superscript notation.
   * LP#1033910: Report in the HUD when we're at the zoom limit, and don't
   bother to zoom further.
+  * LP#1099061: Avoid creating/destroying one thread per plot.
 
- -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 13 Jan 2013 18:01:10 +1300
+ -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 13 Jan 2013 22:36:01 +1300
 
 brot2 (1.0) oneiric; urgency=low
 
